hides subscription selector radio button on monthly tee page

--- a/assets/theme.css
+++ b/assets/theme.css
@@ -7009,6 +7009,6 @@ hr {
 
 /*================ Custom CSS ================*/
 
-.paywhirl-plan-selector {
+.product-form-product-template-tee-month .paywhirl-plan-selector {
   display: none;
 }
