fixes product and price still showing on monthly tee page

--- a/assets/theme.css
+++ b/assets/theme.css
@@ -7013,7 +7013,7 @@ hr {
   display: none!important;
 }
 
-.product-form-product-template-tee-month .product-single__title,
-.product-form-product-template-tee-month .product__price  {
+.paywhirl-theme-debut .product-single__title,
+.paywhirl-theme-debut .product__price  {
   display: none;
 }
