fixes modal popup not working

--- a/sections/product-template-tee-month.liquid
+++ b/sections/product-template-tee-month.liquid
@@ -164,6 +164,8 @@
           </div>
 
           <script>
+          window.onload = function(){ 
+
           // Get the modal
           var modal = document.getElementById("myModal");
 
