--- a/assets/theme.css
+++ b/assets/theme.css
@@ -7043,32 +7043,36 @@ hr {
 
 /*================ Modal Popup Styles ================*/
 
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
 /* Modal Content */
 .modal-content {
-  position: absolute;
   background-color: #fefefe;
   margin: auto;
-  padding: 0;
+  padding: 20px;
   border: 1px solid #888;
-  width: 50%;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
-  -webkit-animation-name: animatetop;
-  -webkit-animation-duration: 0.5s;
-  animation-name: animatetop;
-  animation-duration: 0.5s;
-  top: 40%;
-  max-width: 800px;
-  left: 0;
-  right: 0;
+  width: 80%;
 }
 
 /* The Close Button */
 .close {
-  color: white;
+  color: #aaaaaa;
   float: right;
   font-size: 28px;
   font-weight: bold;
-  margin-top: -4px;
 }
 
 .close:hover,
@@ -7076,31 +7080,4 @@ hr {
   color: #000;
   text-decoration: none;
   cursor: pointer;
-}
-
-.modal-header {
-  padding: 2px 16px;
-  background-color: #039fb5;
-  color: white;
-}
-.modal-header h2{
- 
-  color: white !important;
-}
-
-.modal-body {
-  padding: 2px 16px;
-  max-height: 400px;
-  overflow-y: auto;
-}
-
-.modal-footer {
-  padding: 2px 16px;
-  background-color: #5cb85c;
-  color: white;
-}
-
-.modal-body tbody th, tbody td {
-    
-    border: black 1px solid;
 }
