removes old popup modal code and adds in new solution

--- a/sections/product-template-tee-month.liquid
+++ b/sections/product-template-tee-month.liquid
@@ -147,20 +147,19 @@
             {{ product.description }}
           </div>
 
-          <h2>Modal Example</h2>
+          <div class="product-modal-container monthly-tee-product-modal-container">
+            <a class="button" href="#openModal">Open it up!</a>
 
-          <!-- Trigger/Open The Modal -->
-          <button id="myBtn">Open Modal</button>
-
-          <!-- The Modal -->
-          <div id="myModal" class="modal">
-
-            <!-- Modal content -->
-            <div class="modal-content">
-              <span class="close">&times;</span>
-              <p>Some text in the Modal..</p>
+            <div id="openModal" class="modalbg">
+              <div class="dialog">
+                <a href="#close" title="Close" class="close">X</a>
+                <h2>Holy Crap!!!</h2>
+                <p>You freakin' did it!</p>
+                <p>You opened up the freakin' modal window! Now close it, ya dingus.</p>
+                <p class="fineprint">Based on the article "Creating a modal window with HTML5 & CSS3" at <a href="webdesignerdepot.com">Webdesigner Depot</a></p>
+                <p class="fineprint">p.s. Sorry for calling you a dingus earlier.</p>
+              </div>
             </div>
-
           </div>
 
 
