--- a/assets/theme.css
+++ b/assets/theme.css
@@ -7027,57 +7027,139 @@ hr {
   margin-bottom: 15px;
 }
 
-.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 801; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-}
-
 /*================ Modal Popup Styles ================*/
 
-/* The Modal (background) */
-.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+.monthly-tee-product-modal-container .transition (@time: .5s, @range: all, @ease: ease-out) {
+  -moz-transition: @range @time @ease;
+  -webkit-transition: @range @time @ease;
+  -o-transition: @range @time @ease;
+  transition: @range @time @ease;
 }
 
-/* Modal Content */
-.modal-content {
-  background-color: #fefefe;
-  margin: auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%;
+.monthly-tee-product-modal-container .transition-delay (@time: .4s) {
+  -webkit-transition-delay: @time;  
+  -moz-transition-delay: @time;  
+  -o-transition-delay: @time;  
+  -transition-delay: @time; 
 }
 
-/* The Close Button */
-.close {
-  color: #aaaaaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
+.monthly-tee-product-modal-container .border-radius(@radius) {
+  -moz-border-radius:@radius;
+  -webkit-border-radius:@radius; 
+  border-radius: @radius;
 }
 
-.close:hover,
-.close:focus {
-  color: #000;
+.monthly-tee-product-modal-container .gradient (@coler1: #fff, @coler2: #ccc) {
+    background: @coler1;
+    background: -moz-linear-gradient(@coler1, @coler2);
+    background: -webkit-linear-gradient(@coler1, @coler2);
+    background: -o-linear-gradient(@coler1, @coler2);
+}
+
+.monthly-tee-product-modal-container .box-shadow(@dims:0 0 10px, @color:#000) {
+  box-shadow: @dims @color; // Opera, FFX4
+  -moz-box-shadow:@dims @color; // FFX3.5
+  -webkit-box-shadow:@dims @color; // Safari/Chrome/WebKit
+  .ie7 { filter: e(%("progid:DXImageTransform.Microsoft.Shadow(color='%d', Direction=135, Strength=3)", @color)); }
+}
+
+.monthly-tee-product-modal-container .inset(@dims:1px 1px 1px, @color:#fff) {
+    box-shadow: @dims @color; // Opera, FFX4
+    -moz-box-shadow:@dims @color; // FFX3.5
+    -webkit-box-shadow:@dims @color; // Safari/Chrome/WebKit
+}
+
+body { 
+  width: 100%; 
+  background: url(http://subtlepatterns.subtlepatterns.netdna-cdn.com/patterns/grid.png) repeat #fefefe;
+}
+
+
+.monthly-tee-product-modal-container .button {
+  margin: 40px auto;
+  font-size: 72px;
+  font-family: 'Yanone Kaffeesatz', Arial, sans-serif;
   text-decoration: none;
+  text-shadow: 1px 1px 0px #fff;
+  font-weight: 400; 
+  color: #666;
+  border: 1px solid #ccc;
   cursor: pointer;
+  padding: 20px 70px 30px;
+  position: relative;
+  top: 50px;
+  background: #eee;
+  width: 300px;
+  display: block;
+  text-align: center;
+  .inset;
+  .border-radius(5px);
+  .transition;
+  &:hover{ color: #333; background: #eeffff; .transition;}
 }
+
+.monthly-tee-product-modal-container .modalbg {
+  position: fixed;
+  font-family: Arial, Helvetica, sans-serif;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: rgba(0,0,0,0);
+  z-index: 99999;
+  .transition(2s);
+  .transition-delay(.2s);
+  display: block;
+  pointer-events: none;
+  .dialog {
+    width: 400px;
+    position: relative;
+    top: -1000px;
+    margin: 10% auto;
+    padding: 5px 20px 13px 20px;
+    .border-radius(10px);
+    .gradient;
+    .box-shadow;
+  }
+}
+
+.monthly-tee-product-modal-container .modalbg:target {
+  display: block;
+  pointer-events: auto;
+  background: rgba(4, 10 ,30, .8);
+  .transition();
+  .dialog {
+    top: -20px;
+    .transition(.8s);
+    .transition-delay;
+  }
+}
+
+
+
+.monthly-tee-product-modal-container .close {
+  background: #606061;
+  color: #FFFFFF;
+  line-height: 25px;
+  position: absolute;
+  right: -12px;
+  text-align: center;
+  top: -10px;
+  width: 24px;
+  text-decoration: none;
+  font-weight: bold;
+  -webkit-border-radius: 12px;
+  -moz-border-radius: 12px;
+  border-radius: 12px;
+  .box-shadow;
+  .transition;
+  .transition-delay(.2s);
+  &:hover { background: #00d9ff; .transition; }
+}
+
+.monthly-tee-product-modal-container .fineprint {
+  font-style: italic;
+  font-size: 10px;
+  color: #646;
+}
+.monthly-tee-product-modal-container a { color: #333; text-decoration: none; }
