adds modal popup snippet and references it on product page

--- a/sections/product-template-tee-month.liquid
+++ b/sections/product-template-tee-month.liquid
@@ -141,6 +141,9 @@
             {% include 'product-price', variant: current_variant, show_vendor: section.settings.show_vendor %}
           </div>
 
+          <div class="monthly-tee-modal-container">
+            {% render 'monthly-tee-product-page-modal' %}
+          </div>
 
 
           <div class="product-single__description tee-month-description rte">
