--- a/sections/product-template-tee-month.liquid
+++ b/sections/product-template-tee-month.liquid
@@ -1,3 +1,5 @@
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 <div class="product-template__container page-width tee-month-product"
   id="ProductSection-{{ section.id }}"
   data-section-id="{{ section.id }}"
