--- a/snippets/monthly-tee-product-page-modal.liquid
+++ b/snippets/monthly-tee-product-page-modal.liquid
@@ -1,23 +1,131 @@
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-  Launch demo modal
-</button>
+<script type="text/javascript">
+  
+  function ModalExample() {
+  const [active, setActive] = useState(true);
 
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+  const handleChange = useCallback(() => setActive(!active), [active]);
+
+  const activator = <Button onClick={handleChange}>Open</Button>;
+
+  return (
+    <div style={{height: '500px'}}>
+      <Modal
+        activator={activator}
+        open={active}
+        onClose={handleChange}
+        title="Reach more shoppers with Instagram product tags"
+        primaryAction={{
+          content: 'Add Instagram',
+          onAction: handleChange,
+        }}
+        secondaryActions={[
+          {
+            content: 'Learn more',
+            onAction: handleChange,
+          },
+        ]}
+      >
+        <Modal.Section>
+          <TextContainer>
+            <p>
+              Use Instagram posts to share your products with millions of
+              people. Let shoppers buy from your store without leaving
+              Instagram.
+            </p>
+          </TextContainer>
+        </Modal.Section>
+      </Modal>
+    </div>
+  );
+}
+</script>
+
+<div>
+  <div style="height: 500px;">
+    <div><button class="Polaris-Button" type="button"><span class="Polaris-Button__Content"><span class="Polaris-Button__Text">Open</span></span></button></div>
+  </div>
+  <div id="PolarisPortalsContainer">
+    <div data-portal-id="modal-Polarisportal2">
+      <div>
+        <div class="Polaris-Modal-Dialog__Container" data-polaris-layer="true" data-polaris-overlay="true">
+          <div>
+            <div role="dialog" aria-modal="true" aria-labelledby="Polarismodal-header2" tabindex="-1" class="Polaris-Modal-Dialog focus-visible" data-focus-visible-added="">
+              <div class="Polaris-Modal-Dialog__Modal">
+                <div class="Polaris-Modal-Header">
+                  <div id="Polarismodal-header2" class="Polaris-Modal-Header__Title">
+                    <h2 class="Polaris-DisplayText Polaris-DisplayText--sizeSmall">Reach more shoppers with Instagram product tags</h2>
+                  </div><button class="Polaris-Modal-CloseButton" aria-label="Close"><span class="Polaris-Icon Polaris-Icon--colorBase Polaris-Icon--applyColor"><span class="Polaris-VisuallyHidden"></span><svg viewBox="0 0 20 20" class="Polaris-Icon__Svg" focusable="false" aria-hidden="true">
+                        <path d="m11.414 10 6.293-6.293a1 1 0 1 0-1.414-1.414L10 8.586 3.707 2.293a1 1 0 0 0-1.414 1.414L8.586 10l-6.293 6.293a1 1 0 1 0 1.414 1.414L10 11.414l6.293 6.293A.998.998 0 0 0 18 17a.999.999 0 0 0-.293-.707L11.414 10z"></path>
+                      </svg></span></button>
+                </div>
+                <div class="Polaris-Modal__BodyWrapper">
+                  <div class="Polaris-Modal__Body Polaris-Scrollable Polaris-Scrollable--vertical" data-polaris-scrollable="true">
+                    <section class="Polaris-Modal-Section">
+                      <div class="Polaris-TextContainer">
+                        <p>Use Instagram posts to share your products with millions of people. Let shoppers buy from your store without leaving Instagram.</p>
+                      </div>
+                    </section>
+                  </div>
+                </div>
+                <div class="Polaris-Modal-Footer">
+                  <div class="Polaris-Modal-Footer__FooterContent">
+                    <div class="Polaris-Stack Polaris-Stack--alignmentCenter">
+                      <div class="Polaris-Stack__Item Polaris-Stack__Item--fill"></div>
+                      <div class="Polaris-Stack__Item">
+                        <div class="Polaris-ButtonGroup">
+                          <div class="Polaris-ButtonGroup__Item"><button class="Polaris-Button" type="button"><span class="Polaris-Button__Content"><span class="Polaris-Button__Text">Learn more</span></span></button></div>
+                          <div class="Polaris-ButtonGroup__Item"><button class="Polaris-Button Polaris-Button--primary" type="button"><span class="Polaris-Button__Content"><span class="Polaris-Button__Text">Add Instagram</span></span></button></div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+      <div class="Polaris-Backdrop"></div>
+    </div>
+  </div>
+</div>
+<div>
+  <div class="Polaris-Modal-Dialog__Container" data-polaris-layer="true" data-polaris-overlay="true">
+    <div>
+      <div role="dialog" aria-modal="true" aria-labelledby="Polarismodal-header2" tabindex="-1" class="Polaris-Modal-Dialog focus-visible" data-focus-visible-added="">
+        <div class="Polaris-Modal-Dialog__Modal">
+          <div class="Polaris-Modal-Header">
+            <div id="Polarismodal-header2" class="Polaris-Modal-Header__Title">
+              <h2 class="Polaris-DisplayText Polaris-DisplayText--sizeSmall">Reach more shoppers with Instagram product tags</h2>
+            </div><button class="Polaris-Modal-CloseButton" aria-label="Close"><span class="Polaris-Icon Polaris-Icon--colorBase Polaris-Icon--applyColor"><span class="Polaris-VisuallyHidden"></span><svg viewBox="0 0 20 20" class="Polaris-Icon__Svg" focusable="false" aria-hidden="true">
+                  <path d="m11.414 10 6.293-6.293a1 1 0 1 0-1.414-1.414L10 8.586 3.707 2.293a1 1 0 0 0-1.414 1.414L8.586 10l-6.293 6.293a1 1 0 1 0 1.414 1.414L10 11.414l6.293 6.293A.998.998 0 0 0 18 17a.999.999 0 0 0-.293-.707L11.414 10z"></path>
+                </svg></span></button>
+          </div>
+          <div class="Polaris-Modal__BodyWrapper">
+            <div class="Polaris-Modal__Body Polaris-Scrollable Polaris-Scrollable--vertical" data-polaris-scrollable="true">
+              <section class="Polaris-Modal-Section">
+                <div class="Polaris-TextContainer">
+                  <p>Use Instagram posts to share your products with millions of people. Let shoppers buy from your store without leaving Instagram.</p>
+                </div>
+              </section>
+            </div>
+          </div>
+          <div class="Polaris-Modal-Footer">
+            <div class="Polaris-Modal-Footer__FooterContent">
+              <div class="Polaris-Stack Polaris-Stack--alignmentCenter">
+                <div class="Polaris-Stack__Item Polaris-Stack__Item--fill"></div>
+                <div class="Polaris-Stack__Item">
+                  <div class="Polaris-ButtonGroup">
+                    <div class="Polaris-ButtonGroup__Item"><button class="Polaris-Button" type="button"><span class="Polaris-Button__Content"><span class="Polaris-Button__Text">Learn more</span></span></button></div>
+                    <div class="Polaris-ButtonGroup__Item"><button class="Polaris-Button Polaris-Button--primary" type="button"><span class="Polaris-Button__Content"><span class="Polaris-Button__Text">Add Instagram</span></span></button></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
 </div>
+<div class="Polaris-Backdrop"></div>
