--- a/sections/product-template-tee-month.liquid
+++ b/sections/product-template-tee-month.liquid
@@ -142,7 +142,8 @@
           </div>
 
           <div class="monthly-tee-modal-container">
-            {% render 'monthly-tee-product-page-modal' %}
+            <!-- {% render 'monthly-tee-product-page-modal' %} -->
+            <a href="https://texaslovestees.com/pages/monthly-shirt-club">Learn More</a>
           </div>
 
 
