adds in new modal link setup on monthly tee product page

--- a/sections/product-template-tee-month.liquid
+++ b/sections/product-template-tee-month.liquid
@@ -146,7 +146,7 @@
           </div>
 
           <div class="monthly-tee-modal-container">
-            <!-- {% render 'monthly-tee-product-page-modal' %} -->
+            {% render 'monthly-tee-product-page-modal' %}
             <a href="https://texaslovestees.com/pages/monthly-shirt-club">Learn More</a>
           </div>
 
