updates modal popup script on modal snippet

--- a/snippets/monthly-tee-product-page-modal.liquid
+++ b/snippets/monthly-tee-product-page-modal.liquid
@@ -59,6 +59,8 @@
 
 
 <script type="text/javascript">
+
+window.onload = function(){ 
   
 // Get the modal
 var modal = document.getElementById("myModal");
@@ -85,6 +87,7 @@ window.onclick = function(event) {
     modal.style.display = "none";
   }
 }
+}
 
-  
+
 </script>
