adds modal js and styles to ccs and js files

--- a/snippets/monthly-tee-product-page-modal.liquid
+++ b/snippets/monthly-tee-product-page-modal.liquid
@@ -1,7 +1,7 @@
 <style type="text/css">
   
 /* The Modal (background) */
-.modal {
+.monthly-modal {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
@@ -16,7 +16,7 @@
 }
 
 /* Modal Content */
-.modal-content {
+.monthly-modal-content {
   background-color: #fefefe;
   margin: auto;
   padding: 20px;
@@ -25,15 +25,15 @@
 }
 
 /* The Close Button */
-.close {
+.monthly-close {
   color: #aaaaaa;
   float: right;
   font-size: 28px;
   font-weight: bold;
 }
 
-.close:hover,
-.close:focus {
+.monthly-close:hover,
+.monthly-close:focus {
   color: #000;
   text-decoration: none;
   cursor: pointer;
@@ -47,56 +47,12 @@
 <button id="myBtn">Open Modal</button>
 
 <!-- The Modal -->
-<div id="myModal" class="modal">
+<div id="myModal" class="monthly-modal">
 
   <!-- Modal content -->
-  <div class="modal-content">
-    <span class="close">&times;</span>
+  <div class="monthly-modal-content">
+    <span class="monthly-close">&times;</span>
     <p>Some text in the Modal..</p>
   </div>
 
 </div>
-
-
-<script type="text/javascript">
-
-window.onload = function(){ 
-
-// Get the modal
-
-var modal = document.getElementById('myModal');
-
-// Get the button that opens the modal
-var btn = document.getElementById("myBtn");
-
-// Get the <span> element that closes the modal
-var span = document.getElementsByClassName("close")[0];
-var headermodaltext = document.getElementById("headerforfabric");  
-// When the user clicks the button, open the modal 
- if (typeof(btn) != 'undefined' && btn != null){
-btn.onclick = function() {
-  modal.style.display = "block";
-}
-  }
-
-// When the user clicks on <span> (x), close the modal
- if (typeof(span) != 'undefined' && span != null){
-span.onclick = function() {
-  modal.style.display = "none";
-}
-}
-
-// When the user clicks anywhere outside of the modal, close it
-window.onclick = function(event) {
-    
-  
-  if (event.target == modal) {
-    if (typeof(modal) != 'undefined' && modal != null){
-    modal.style.display = "none";
-  }
-  }
-  
-}
-
-
-</script>
