--- a/snippets/monthly-tee-product-page-modal.liquid
+++ b/snippets/monthly-tee-product-page-modal.liquid
@@ -44,7 +44,7 @@
 <h2>Modal Example</h2>
 
 <!-- Trigger/Open The Modal -->
-<button id="myBtn">Open Modal</button>
+<button id="myBtn">Learn More</button>
 
 <!-- The Modal -->
 <div id="myModal" class="monthly-modal">
