adds in monthly tee club explainer text to modal popup

--- a/snippets/monthly-tee-product-page-modal.liquid
+++ b/snippets/monthly-tee-product-page-modal.liquid
@@ -7,7 +7,77 @@
   <!-- Modal content -->
   <div class="monthly-modal-content">
     <span class="monthly-close">&times;</span>
-    <p>Some text in the Modal..</p>
+    <h3>What is Shirt of the Month?</h3>
+<p>Shirt of the Month is a subscription-based program where we design and produce an Texas-themed t-shirt each month! Each shirt has a unique Texas flair to it and costs just $12 each month (+$3.04 for tax and shipping).</p>
+
+<h3>How do I sign up for Shirt of the Month?</h3>
+<p>Signing up for Shirt of the Month couldn’t be easier.</p>
+<ol>
+  <li>Click on Shirt of the Month at the top of our web page.</li>
+  <li>Click the Subscribe button.</li>
+  <li>Fill out the Subscription Info form.</li>
+  <li>Click Submit Subscription.</li>
+</ol>
+
+<h3>How does Shirt of the Month work?</h3>
+<p>When you subscribe to Shirt of the Month, you’ll pay $15.04 and will be shipped our “Doin’ Fine” Introductory shirt (all new subscribers receive this t-shirt). You will then be charged on the 1st of every month and will receive a new, Texas-themed t-shirt within the first week of each new month thereafter. There is no contract involved with Shirt of the Month and you are free to cancel at anytime … but hey, at just $12/month who would want to cancel, right?</p>
+
+<h3>How does billing work for my subscription?</h3>
+<p>Upon enrollment your credit or debit card will immediately be charged $15.04 ($12 for the shirt, +$3.04 shipping), and you will be shipped your “Doin’ Fine” Introductory shirt. Then, on the 1st of every month thereafter, you will be charged $15.04 for that month’s uniquely designed, Texas-themed t-shirt, which you will receive within the first week.</p>
+
+<h3>Will all of your Shirt of the Month t-shirts have an Texas-theme?</h3>
+<p>Yes! We are a local Texas company, and love this land we call home. The people of Texas, scattered around our country, are unique and pride themselves in this grand land, and through Shirt of the Month, we want to offer them a way to wear their pride.</p>
+
+<h3>Can I purchase the Shirt of the Month without enrolling in the program?</h3>
+<p>We offer some sale shirts and some special limited edition items to non-subscribers, but most of our products are for subscribers only. Follow us on Facebook and Instagram to stay in the loop!</p>
+
+<h3>How do I cancel my Shirt of the Month subscription?</h3>      
+<p>To cancel your Shirt of the Month subscription, simply email us at SOTM@TexasShirtCompany.com. There is no contract or cancellation penalty; however, your request must be made by the 20th of the month to apply to the upcoming shipment. This allows us to catch your shirt before it enters the shipment process.</p>
+
+<h3>How can I change my address, size, or payment info?</h3> 
+
+<p>Access your CUSTOMER PORTAL at:</p> 
+
+<p><a href="https://Texasshirtcompany.chargebeeportal.com/portal/login">https://Texasshirtcompany.chargebeeportal.com/portal/login</a></p>
+
+<p>anytime to update your account. Note that all account changes must take place by the 20th of the month to apply to the upcoming shipment, i.e. changes must be submitted by 12/20 to apply to the January shirt.</p> 
+
+<h3>What kind of shirts do use?</h3>
+<p>We are transitioning to Bella Canvas!</p>
+
+<h3>Why Bella Canvas?</h3>
+<p>Higher grade long-staple cotton + the Bella Canvas Airlume method= the softest tees you'll ever wear!
+The abundance of exciting colors available, including lovely neutrals, prism halftones, and beautiful heathers
+Eco-friendly and sweatshop free production.</p> 
+<p>To learn more about the Bella Canvas company <a href="">click here</a></p>
+<p>For sizing info <a href="">click here</a></p>
+<p>The material of our shirts is either 100% Airlume cotton or a 60/40 polyester/Airlume cotton blend, which depends on the color. Airlume cotton spinning is the Bella Canvas method, which produces the softest tees you'll ever wear!  All of our shirts are preshrunk and unisex. We always send an email preview around mid-month so you’ll see (and get excited for) what is coming your way the next month!</p>
+
+<h3>When will my order ship?</h3>
+<p>Our standard shipping rate is USPS First Class mail. Transit times are roughly 3-5 days although it is usually a little faster for in state orders. We process and ship items in the order that we receive between 8am-5pm CST Monday-Friday. Please allow 1-3 days for processing of order to be completed. Shirt of the Month shipments will generally arrive within the first few business days of the new month.</p>
+
+<h3>How do you handle returns/exchanges?</h3>
+<p>Please mail your unwashed, unworn shirt to us at the following address:</p>
+<address>C/O Returns
+Texas Shirt Company
+26 NE 10th St.
+OKC, OK 73104
+</address>
+
+<p>Be sure to include a note that has your name, the size you wish to exchange for, and your shipping address and as long as we have that size available, we will happily send you a new shirt at no additional cost to you.</p>
+
+<p>To find out if we have the size you need in stock, please email <a href="mailto:%20SOTM@TexasShirtCompany.com">SOTM@TexasShirtCompany.com</a>.</p>
+
+<h3>Can I give a Shirt of the Month subscription as a gift?</h3>
+<p>Absolutely! Many of our subscribers decide to give a gift subscription to friends and loved ones- talk about the gift that keeps on giving!
+Just make sure you fill out the appropriate information on the Subscriber form (where shirt will be shipped, recipient’s name, email, etc.).
+Since our system does not share payment information between accounts, you'll need to sign up for a new subscription completely.</p>
+
+<h3>Do you do custom work?</h3>                       
+<p>We love doing custom orders! We offer screen-printing, embroidery, and vinyl decoration, plus promotional products! Please contact us through our website's custom contact form. We will walk with you through the entire process, from design to completion, making sure you get what you want and are proud of what you get.</p>
+
+<p>We’re strive to provide excellent customer service and are always happy to help!</p>
+<p>If you have any questions, the best way to reach us is via email at <a href="mailto:%20SOTM@TexasShirtCompany.com">SOTM@TexasShirtCompany.com</a>.</p>
   </div>
 
 </div>
