adds banner to monthly tee club modal

--- a/snippets/monthly-tee-product-page-modal.liquid
+++ b/snippets/monthly-tee-product-page-modal.liquid
@@ -7,6 +7,9 @@
   <!-- Modal content -->
   <div class="monthly-modal-content">
     <span class="monthly-close">&times;</span>
+    <div class="modal-title-banner">
+      <h4>Monthly Tee Shirt Club</h4>
+    </div>
     <h3>What is Shirt of the Month?</h3>
 <p>Shirt of the Month is a subscription-based program where we design and produce an Texas-themed t-shirt each month! Each shirt has a unique Texas flair to it and costs just $12 each month (+$3.04 for tax and shipping).</p>
 
