updates modal content and styles

--- a/snippets/monthly-tee-product-page-modal.liquid
+++ b/snippets/monthly-tee-product-page-modal.liquid
@@ -10,6 +10,7 @@
     <div class="modal-title-banner">
       <h4>Monthly Tee Shirt Club</h4>
     </div>
+    <div class="monthly-modal-inner">
     <h3>What is Shirt of the Month?</h3>
 <p>Shirt of the Month is a subscription-based program where we design and produce an Texas-themed t-shirt each month! Each shirt has a unique Texas flair to it and costs just $12 each month (+$3.04 for tax and shipping).</p>
 
@@ -82,5 +83,6 @@ Since our system does not share payment information between accounts, you'll nee
 <p>We’re strive to provide excellent customer service and are always happy to help!</p>
 <p>If you have any questions, the best way to reach us is via email at <a href="mailto:%20SOTM@TexasShirtCompany.com">SOTM@TexasShirtCompany.com</a>.</p>
   </div>
+</div>
 
 </div>
