--- a/assets/theme.css
+++ b/assets/theme.css
@@ -7071,7 +7071,6 @@ hr {
 .monthly-modal-content {
   background-color: #fefefe;
   margin: auto;
-  padding: 50px;
   border: 1px solid #888;
   width: 80%;
   max-height: 675px;
@@ -7092,4 +7091,7 @@ hr {
   color: #000;
   text-decoration: none;
   cursor: pointer;
+}
+.monthly-modal-inner {
+  padding: 50px;
 }
