updates modal banner styles

--- a/assets/theme.css
+++ b/assets/theme.css
@@ -7101,6 +7101,7 @@ hr {
   height: 140px;
   background: #ff0100;
   text-align: center;
+  background: url(https://cdn.shopify.com/s/files/1/0571/2609/2996/files/armabanner-image.png?v=1633370056);
 }
 .modal-title-banner h4 {
   margin: 55px 0;
